# MyLearnWebGPU

./: .gitignore  .gitmodules  CMakeLists.txt  ResourceLoading.cpp  ResourceLoading.h  VertexAttributes.h  WebGPUCPP.cpp  main.cpp
resources/: pyramid.txt  shader.wgsl
